--- a/src/app/components/svg-checker/svg-checker.component.html
+++ b/src/app/components/svg-checker/svg-checker.component.html
@@ -1,8 +1,35 @@
-<div>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-      </h1>
-  <!-- svg-checker.component.html -->
-  <input type="file" (change)="onFileSelected($event)" accept=".svg" />
-  <p *ngIf="isStrokeType !== null">Is Stroke Type: {{ isStrokeType }}</p>
+<div class="mx-10 mt-4">
+  <h1 class="font-semibold text-4xl text-center">Free Online SVG Filter</h1>
+
+  <div
+    mat-ripple
+    class="h-44 w-full mt-4 flex items-center justify-center bg-gray-100 border border-dashed border-gray-400 rounded cursor-pointer"
+  >
+    <input
+      hidden
+      type="file"
+      (change)="onFileSelected($event)"
+      accept=".svg"
+      #fileSelector
+      multiple="true"
+    />
+    <span class="">Drag & Drop or</span>
+    <span
+      (click)="fileSelector.click()"
+      class="ms-1 hover:cursor-pointer font-bold"
+      >Browse</span
+    >
+  </div>
+</div>
+<!-- svg-checker.component.html -->
+<div class="flex-col mx-10 mt-4">
+  @for (item of resultList; track $index) {
+  <div class="">
+    <div class="me-1">
+      <img width="30px" height="30px" [src]="item.file" alt="SVG Image" />
+    </div>
+    <div class="me-1">svg.png</div>
+    <div class="me-1">fill</div>
+  </div>
+  }
 </div>
