--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<div class="w-full h-fit flex items-center justify-between shadow-sm py-2 px-16">
+  <div class="flex flex-row items-center justify-center">
+    <div class="text-black text-2xl font-extrabold me-6">SVGActions</div>
+    <!-- <div mat-ripple type="button"
+      class="cursor-pointer flex items-center text-sm text-center text-black bg-white  rounded-full px-4 hover:text-base hover:border-2">
+      Filter</div> -->
+  </div>
+  <img class="cursor-pointer" width="35" height="35" src="https://img.icons8.com/ios-filled/50/user-male-circle.png"
+    alt="user-male-circle" />
+</div>
