--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <!-- <app-svg-checker/> -->
-<!-- <router-outlet /> -->
+
 
 <div class="w-full h-full relative flex flex-col">
   <app-header class="absolute top-0 w-full" />
-  <app-svg-filter class="absolute top-1/4 w-full" />
-
+  <!-- <app-svg-filter class="absolute top-1/4 w-full" /> -->
+  <!-- <app-svg-result class="absolute top-1/4 w-full" /> -->
+  <div class="absolute top-1/4 w-full">
+    <router-outlet />
+  </div>
 </div>
