download zip, filter & search svg

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <app-header class="absolute top-0 w-full" />
   <!-- <app-svg-filter class="absolute top-1/4 w-full" /> -->
   <!-- <app-svg-result class="absolute top-1/4 w-full" /> -->
-  <div class="absolute top-1/4 w-full">
+  <div class="absolute w-full h-full -top-[5%]">
     <router-outlet />
   </div>
 </div>
