--- a/src/app/components/svg-result/svg-result.component.html
+++ b/src/app/components/svg-result/svg-result.component.html
@@ -1,27 +1,51 @@
-<div class="flex flex-col items-center justify-center h-full">
-    <div class="w-1/2 shadow-md rounded-xl border border-gray-200 flex flex-col items-start justify-start p-6">
+<div class="flex flex-col items-center justify-center h-full w-full">
+    <div
+        class="w-1/2 max:h-1/2 shadow-md rounded-xl border border-gray-200 flex flex-col items-start justify-start overflow-auto p-6">
 
-        <form class="w-full">
-            <mat-form-field class="w-full">
-                <input type="email" class="" matInput [formControl]="emailFormControl" placeholder="Search">
-            </mat-form-field>
+        <form class="w-full mb-2">
+            <div class="flex flex-row">
+
+                <input type="email" class="flex-1 px-1 py-1 bg-slate-300 rounded-md text-black" matInput
+                    [formControl]="emailFormControl" placeholder="Search">
+                <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>filter_list</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="onFilterItem('all')">All</button>
+                    <button mat-menu-item (click)="onFilterItem('fill')">Fill</button>
+                    <button mat-menu-item (click)="onFilterItem('stroke')">Stroke</button>
+                </mat-menu>
+                <button mat-icon-button (click)="downloadFilesAsZip()">
+                    <mat-icon>download</mat-icon>
+                </button>
+            </div>
         </form>
 
-        <ul class="space-y-4">
+        <ul class="space-y-4 w-full mt-3">
+            @if (svgFileList) {
+            @for (item of svgFileList; track $index) {
             <li class="flex items-center space-x-4 border-b border-gray-200 pb-4 w-full">
                 <div class="w-16 h-16 bg-gray-100 flex items-center justify-center">
-                    <img src="https://img.icons8.com/external-dreamstale-lineal-dreamstale/32/external-svg-files-dreamstale-lineal-dreamstale.png"
-                        alt="svg file" class="max-w-full max-h-full">
+                    <img [src]="getImageUrl(item.file)" alt="svg file" class="max-w-full max-h-full">
                 </div>
                 <div class="flex-grow">
-                    <div class="font-semibold">svg file</div>
-                    <p class="text-sm text-gray-600">10KB | Stroke</p>
+                    <div class="font-normal">{{item.file.name}}</div>
+                    <div class="flex flex-row items-center justify-start text-sm space-x-2">
+                        <p class="text-gray-600">{{formatFileSize(item.file.size)}} | </p>
+                        <p class="font-light w-14 py-0.5 bg-black text-white rounded-full text-center">{{item.result}}
+                        </p>
+
+                    </div>
+                    <!-- <p class="text-sm text-gray-600">{{formatFileSize(item.file.size)}} | <span
+                            class="font-light w-9 py-0.5 bg-black text-white rounded">{{item.result}}</span></p> -->
                 </div>
                 <div class="text-sm text-gray-500">
-                    Last modified: 20.08.2024
+                    Last modified: {{formatDate(item.file.lastModified)}}
                 </div>
             </li>
+            }
+            }
         </ul>
-        
+
     </div>
 </div>
