--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<!-- <app-svg-checker/> -->
-
-
 <div class="w-full h-full relative flex flex-col">
-  <app-header class="absolute top-0 w-full" />
-  <!-- <app-svg-filter class="absolute top-1/4 w-full" /> -->
-  <!-- <app-svg-result class="absolute top-1/4 w-full" /> -->
+  <app-header class="absolute top-0 w-full z-50" />
   <div class="absolute w-full h-full -top-[5%]">
     <router-outlet />
   </div>
