--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,21 @@
 <div class="w-full h-fit flex items-center justify-between shadow-sm py-2 px-16">
   <div class="flex flex-row items-center justify-center">
     <div class="text-black text-2xl font-extrabold me-6">SVGActions</div>
-    <!-- <div mat-ripple type="button"
-      class="cursor-pointer flex items-center text-sm text-center text-black bg-white  rounded-full px-4 hover:text-base hover:border-2">
-      Filter</div> -->
+    <div class="flex space-x-6">
+      <button 
+        *ngFor="let button of buttons"
+        (click)="setSelectedButton(button.id)"
+        class="relative transform transition-transform hover:scale-110 cursor-pointer"
+        [ngClass]="{'font-semibold': selectedButton === button.id}"
+      >
+        {{ button.label }}
+        <div 
+          *ngIf="selectedButton === button.id" 
+          class="absolute bottom-0 left-0 right-0 h-0.5 bg-blue-500"
+        >
+        </div>
+      </button>
+    </div>
   </div>
   <img class="cursor-pointer" width="35" height="35" src="https://img.icons8.com/ios-filled/50/user-male-circle.png"
     alt="user-male-circle" />
