--- a/src/app/components/file-uploader/file-uploader.component.html
+++ b/src/app/components/file-uploader/file-uploader.component.html
@@ -1,19 +1,17 @@
 <div class="flex flex-col items-center justify-center h-full">
-    <div 
- 
-        class="w-1/3 shadow-md rounded-xl border border-gray-200 flex flex-col items-start justify-start p-6">
+    <div class="w-1/3 shadow-md rounded-xl border border-gray-200 flex flex-col items-start justify-start p-6">
 
         <div class="text-lg font-light text-black mt-2">Upload SVG</div>
         <div class="text-sm font-light text-black mt-1">Accepted file format: .svg. Maximum file size: 5MB.</div>
-        <div
+        <div 
             #dropZone 
-            (dragover)="onDragOver($event)"
-            (dragleave)="onDragLeave($event)"
+            (dragover)="onDragOver($event)" 
+            (dragleave)="onDragLeave($event)" 
             (drop)="onDrop($event)"
             [class.bg-gray-200]="isDragging"
             class="w-full flex flex-col items-center justify-center border-dashed border-2 border-gray-300 bg-gray-100 rounded-lg p-12 space-y-5 mt-6">
-
             <mat-icon class="icon-size text-gray-300">cloud_upload</mat-icon>
+            
             @if (isDragging) {
                 <div class="text-base font-thin text-black my-32">Drop & Drop your SVG files here</div>
             }
@@ -29,12 +27,13 @@
             }
 
             @if (svgService.getSvgFileList.length !==0) {
-                <div class="text-sm text-green-700 font-medium">You have selected {{svgService.getSvgFileList.length}} files</div>
+                <div class="text-sm text-green-700 font-medium">
+                    You have selected {{svgService.getSvgFileList.length}} files
+                </div>
             }
         </div>
 
-        <div mat-ripple (click)="onSubmit()"
-            class="cursor-pointer items-center text-base text-white font-light text-center bg-black w-full rounded-lg py-2 px-4 mt-6">
+        <div mat-ripple (click)="onSubmit()" class="cursor-pointer items-center text-base text-white font-light text-center bg-black w-full rounded-lg py-2 px-4 mt-6">
             Submit
         </div>
 
