--- a/src/app/components/preview-svg/preview-svg.component.html
+++ b/src/app/components/preview-svg/preview-svg.component.html
@@ -1,1 +1,17 @@
-<p>preview-svg works!</p>
+<div class="flex flex-col items-center justify-center h-full pt-32">
+    <div class="flex w-full h-full">
+        <div class="w-1/2 p-6">
+          <textarea
+            [(ngModel)]="svgCode"
+            class="w-full h-full p-4 border border-gray-300 rounded-lg shadow-sm resize-none"
+            placeholder="Enter your text here..."
+            >
+        </textarea>
+        </div>
+        <div class="w-1/2 p-6">
+          <div class="w-full h-full p-4 bg-white border border-gray-300 rounded-lg shadow-sm overflow-auto">
+            <div class="!object-scale-down" [innerHTML]="svgCode | safeSvg"></div>
+          </div>
+        </div>
+      </div>
+</div>
